****************************
Changelog for eXtplorer
Version $Id: CHANGELOG.txt 246 2016-02-10 21:21:12Z soeren $
****************************

--- version 2.1.10 ---
- webdav display UPPER/CASE/FULL/PATH with some webdav client
- standalone extplorer webdav does not work with PHP7
- CVE-2016-4313: archive path traversal vulnerability in extplorer 2.1.9
- #202 Users with read only permissions should not be able to extract archives.

--- version 2.1.9 ---
- fixed PHP 7 compatibility issues
- raising PHP compatibility to PHP >= 5.4

--- version 2.1.8 ---
- added security functions for protection against CSRF attacks
- fixed "directories with the name '0' are not loading"

--- version 2.1.7 ---
- fixed SWFUpload against XSS vulnerabilities
- fixed XSS vulnerability in file list

--- version 2.1.6 ---
- fixed https usage for ports other than 443
- fixed XSS issue related to PHP_SELF
- added date range filtering to file search
- simplified search function
- fixed scrambled non-ASCII file names on UTF-8 systems

--- version 2.1.5 ---
- fixed doubled subdirectories in directory tree
- fixed wrong Joomla path detection (security issue on some systems)

--- version 2.1.4 ---
- fixed security issues found by Trustwave SpiderLabs, Vikas Singhal
- update to the latest version of Archive_Tar
- fixed version check link, now points to extplorer.net

--- version 2.1.3 ---
- fixed serious login vulnerability reported by Brendan Coles of itsecuritysolutions.org (the only changed file is /include/users.php)

--- version 2.1.2 ---
- hide the top and bottom bar in J! 3.0
- fixed installer for J! 2.5

--- version 2.1.1 ---
- Joomla! 3.0 compatibility

--- version 2.1.0 ---

- fixed an XSS-vulnerability (impact: medium, users needs to be logged in)

--- version 2.1.0 RC5 released ---

- fixed password change functionality

--- version 2.1.0 RC4 released ---

- updated version check to work with J! 1.7