@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <mosinstall type="component">
 <!-- Joomla! 1.0 Installer XML File 
-$Id: extplorer.xml 247 2016-02-23 10:06:18Z soeren $ -->
+$Id: extplorer.xml 249 2016-12-11 16:11:03Z soeren $ -->
     <name>eXtplorer</name>
-    <creationDate>15.03.2016</creationDate>
+    <creationDate>22.06.2017</creationDate>
     <author>soeren, QuiX Project</author>
     <copyright>Soeren Eberhardt-Biermann, QuiX Project</copyright>
     <authorEmail>info|-at|-extplorer.net</authorEmail>
     <authorUrl>http://extplorer.net/</authorUrl>
-    <version>2.1.9</version>
+    <version>2.1.10</version>
     <description><![CDATA[
 	<div align="left"><img src="components/com_extplorer/images/eXtplorer_logo.png" alt="eXtplorer Logo" /></div>
 	<h2>Successfully installed eXtplorer&nbsp;</h2>
