@@ -3,7 +3,7 @@
 if( ! defined( '_JEXEC' ) && ! defined( '_VALID_MOS' ) )
 	die( 'Restricted access' ) ;
 /**
- * @version $Id: extract.php 242 2015-08-19 06:29:26Z soeren $
+ * @version $Id: extract.php 249 2016-12-11 16:11:03Z soeren $
  * @package eXtplorer
  * @copyright soeren 2007-2015
  * @author The eXtplorer project (http://extplorer.net)
