@@ -132,7 +132,7 @@ class ext_Json
     *                                   bubble up with an error, so all return values
     *                                   from encode() should be checked with isError()
     */
-    function ext_Json($use = 0)
+    function __construct($use = 0)
     {
         $this->use = $use;
     }
@@ -839,7 +839,7 @@ if (class_exists('PEAR_Error')) {
 
     class Services_JSON_Error extends PEAR_Error
     {
-        function Services_JSON_Error($message = 'unknown error', $code = null,
+        function __construct($message = 'unknown error', $code = null,
                                      $mode = null, $options = null, $userinfo = null)
         {
             parent::PEAR_Error($message, $code, $mode, $options, $userinfo);
@@ -853,7 +853,7 @@ if (class_exists('PEAR_Error')) {
      */
     class Services_JSON_Error
     {
-        function Services_JSON_Error($message = 'unknown error', $code = null,
+        function __construct($message = 'unknown error', $code = null,
                                      $mode = null, $options = null, $userinfo = null)
         {
 
